--- a/themes/raiser/sass/components/_footer.scss
+++ b/themes/raiser/sass/components/_footer.scss
@@ -1,14 +1,18 @@
-footer {
+#footer-wrapper {
   background: $primary;
 
   #main-menu h2 { display: none; }
 
-  #pre-footer {
+  footer {
     background: $white;
     border-bottom: 3px solid $page-bg;
     padding: 0.2em 1em; 
     overflow: hidden;
     text-align: center;
+
+    #block-redhen-raiser-blocks-branding {
+      margin-bottom: auto; 
+    }
 
     #logo {
       display: block; 
@@ -24,7 +28,12 @@ footer {
       font-family: $raiser-heading-font;
     } 
 
-    .social  {
+    #block-bean-social-media-links {
+      margin-bottom: auto;
+      h3 { display: none; }
+    }
+
+    #block-bean-social-media-links ul {
       margin: 0;
       overflow: hidden;
       padding-left: 0;
@@ -42,20 +51,20 @@ footer {
           text-indent: -9999px;
           width: 41px;
 
-          &.twitter {
+          &[href*="twitter"] {
             background: url('../images/social.png') 0 0 no-repeat; 
             background-size: 195px 42px;
             margin-bottom: -1.5em;
           }
-          &.facebook {
+          &[href*="facebook"] {
             background: url('../images/social.png') -3.2em 0 no-repeat; 
             background-size: 195px 42px;
           }
-          &.linkedin {
+          &[href*="linkedin"] {
             background: url('../images/social.png') -6.4em 0 no-repeat; 
             background-size: 195px 42px;
           }
-          &.google-plus {
+          &[href*="google"] {
             background: url('../images/social.png') -9.6em 0 no-repeat; 
             background-size: 195px 42px;
           }
@@ -79,9 +88,9 @@ footer {
 }
 
 @include small {
-  footer {
+  #footer-wrapper {
   
-    #pre-footer {
+    footer {
       text-align: left;
 
       #logo {
@@ -101,7 +110,7 @@ footer {
         vertical-align: top;
       }
 
-      .social {
+      #block-bean-social-media-links ul {
         float: right; 
         margin-top: 0.8em;
       }
