--- a/themes/raiser/sass/components/_updates.scss
+++ b/themes/raiser/sass/components/_updates.scss
@@ -12,7 +12,7 @@
     h2 {
       line-height: 1em;
       @include medium {
-        position: absolute;
+        margin-bottom: em(8);
       }
 
       a {
@@ -22,18 +22,37 @@
         }
       }
     }
+    ol, ul {
+      margin: 0 0 em(16) 0;
+      left: em(20);
+      line-height: 1.2;
+      position: relative;
+      li {
+        font-size: em(15);
+        list-style-position: outside;
+        margin-bottom: em(3);
+        margin-left: 0;
+      }
+    }
+
+    p {
+      margin: 0 0 em(16) 0;
+    }
 
     img {
       @include border-radius(8px);
       float: left;
-      margin-top: em(45);
+      // margin-top: em(16);
       margin-right: em(8);
     }
 
     .field-name-body {
       @include medium {
-        padding-top: 1em;
+        // padding-top: 1em;
       }
+    }
+    ul.links {
+      left: 0;
     }
   }
   .entity-redhen-contact img {
