--- a/themes/raiser/sass/components/_campaign-team.scss
+++ b/themes/raiser/sass/components/_campaign-team.scss
@@ -9,6 +9,10 @@
     }
   }
 
+  .redhen_campaign_page_campaign {
+    width: 75%; 
+  }
+
   .redhen_campaign_page_title {
     float: left; 
     font-size: em(16);
