--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -2011,37 +2011,37 @@ body.front #main #content {
 /* line 31, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links {
   margin-bottom: auto;
+  padding-bottom: 0;
 }
-/* line 33, ../sass/components/_footer.scss */
+/* line 34, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links h3 {
   display: none;
 }
-/* line 36, ../sass/components/_footer.scss */
+/* line 37, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links ul {
   margin: 0;
   overflow: hidden;
   padding-left: 0;
   text-align: center;
 }
-/* line 42, ../sass/components/_footer.scss */
+/* line 43, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links ul li {
   display: inline-block;
   list-style-type: none;
   text-align: center;
   position: relative;
 }
-/* line 48, ../sass/components/_footer.scss */
+/* line 49, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links ul li a {
   display: list-item;
   height: 41px;
   text-indent: -9999px;
   width: 41px;
 }
-/* line 54, ../sass/components/_footer.scss */
+/* line 55, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links ul li a[href*="twitter"] {
   background: url("../images/social.png") 0 0 no-repeat;
   background-size: 195px 42px;
-  margin-bottom: -1.5em;
 }
 /* line 59, ../sass/components/_footer.scss */
 #footer-wrapper footer #block-bean-social-media-links ul li a[href*="facebook"] {
