--- a/themes/raiser/css/styles.css
+++ b/themes/raiser/css/styles.css
@@ -721,7 +721,14 @@ form button:hover {
   color: white;
   background: #ffab30;
 }
-/* line 85, ../sass/base/_base.scss */
+@media (min-width: 320px) and (max-width: 480px) {
+  /* line 86, ../sass/base/_base.scss */
+  form input[type=submit],
+  form button {
+    padding: 0.8em 2em;
+  }
+}
+/* line 91, ../sass/base/_base.scss */
 form a.button {
   background: none;
   padding: 0.8em 1em;
@@ -747,7 +754,7 @@ form a.button:hover {
   border: 3px solid #90c965;
   color: white;
 }
-/* line 89, ../sass/base/_base.scss */
+/* line 95, ../sass/base/_base.scss */
 form select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -763,7 +770,7 @@ form select {
   margin-top: 2px;
   padding: 5px 20px 5px 10px;
 }
-/* line 103, ../sass/base/_base.scss */
+/* line 109, ../sass/base/_base.scss */
 form select:disabled {
   background-color: #f1f1f1;
   background-image: none;
@@ -771,7 +778,7 @@ form select:disabled {
   color: #989898;
   cursor: default;
 }
-/* line 112, ../sass/base/_base.scss */
+/* line 118, ../sass/base/_base.scss */
 form select, form x:-moz-any-link, form x:only-child {
   background: none;
 }
@@ -2462,6 +2469,12 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   padding: 1em;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  /* line 183, ../sass/components/_forms.scss */
+  .ajax-progress-throbber {
+    display: none;
+  }
+}
 /* line 2, ../sass/components/_fundraise-workflow.scss */
 .page-fundraise a[href="/cafb-dc/redhen_campaign/add/general"] {
   background: none;
@@ -2782,6 +2795,21 @@ form[id^="redhen-campaign-campaign-page-form"] .field-name-redhen-campaign-goal 
   display: none;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  /* line 173, ../sass/components/_fundraise-workflow.scss */
+  .page-redhen-campaign-add-general fieldset[id^="edit-field-story-und-0-format"] .filter-help,
+  .page-redhen-campaign-page-edit fieldset[id^="edit-field-story-und-0-format"] .filter-help,
+  .page-redhen-campaign-page-add fieldset[id^="edit-field-story-und-0-format"] .filter-help,
+  .page-redhen-campaign-edit fieldset[id^="edit-field-story-und-0-format"] .filter-help {
+    display: none;
+  }
+
+  /* line 181, ../sass/components/_fundraise-workflow.scss */
+  .page-redhen-campaign-donate form select,
+  .page-redhen-campaign-donate form input[type=text] {
+    max-width: 285px;
+  }
+}
 /* line 1, ../sass/components/_header.scss */
 #header {
   background: white;
