--- a/themes/raiser/sass/components/_donation-form.scss
+++ b/themes/raiser/sass/components/_donation-form.scss
@@ -1,6 +1,6 @@
 .page-redhen-campaign-donate {
   h2#page-title {
-    display: block; 
+    display: block;
     margin: 1em 0
   }
 
@@ -9,16 +9,24 @@
     padding-right: 1em;
 
     fieldset {
-      border: none; 
+      border: none;
       padding: 0;
 
       legend {
-        font-size: 1.25em; 
+        font-size: 1.25em;
       }
-    } 
+    }
 
     #edit-product-label {
-      display: none; 
+      display: none;
+    }
+  }
+}
+
+@include xsmall {
+  .page-redhen-campaign-donate {
+    h2#page-title {
+      margin-top: em(-16);
     }
   }
 }
