--- a/themes/raiser/sass/components/_forms.scss
+++ b/themes/raiser/sass/components/_forms.scss
@@ -179,3 +179,8 @@ form[id^="redhen-campaign-campaign-page-form"] {
     padding: 1em;
   }
 }
+
+// Fixes FF red border on required inputs
+input:invalid {
+  box-shadow: none;
+}
