--- a/themes/raiser/sass/components/_forms.scss
+++ b/themes/raiser/sass/components/_forms.scss
@@ -180,11 +180,7 @@ form[id^="redhen-campaign-campaign-page-form"] {
   }
 }
 
-// Fixes FF red border on required inputs
-input:invalid {
-  box-shadow: none;
-}
-
+// Expand media items on campaign edit page
 .page-redhen-campaign-edit .field-type-image .preview {
   width: 100%;
   .media-item {
@@ -193,3 +189,14 @@ input:invalid {
     width: 100%;
   }
 }
+
+// Fixes FF red border on required inputs
+input:invalid {
+  box-shadow: none;
+}
+
+// Removes IE arrow on custom selects
+select::-ms-expand {
+  display: none;
+}
+
